assets/main.css
* {
  margin: 0;
  padding: 0;
  outline: none;
  box-sizing: border-box;
  -moz-box-sizing: border-box;
  -webkit-box-sizing: border-box;
  scroll-behavior: initial;
}

html {
  overflow: scroll;
  overflow-x: hidden;
}
::-webkit-scrollbar {
  width: 0; /* Remove scrollbar space */
  background: transparent; /* Optional: just make scrollbar invisible */
}
/* Optional: show position indicator in red */
::-webkit-scrollbar-thumb {
  background: #ff0000;
}

body {
  font-size: 14px;
  font-family: "Syne", sans-serif !important;
  color: #fff;
  background: black;
  width: 100%;
  min-height: 100%;
  scroll-behavior: smooth;
}

::selection {
  background-color: #faf9f6; /* Set the background color */
  color: #000; /* Set the text color */
}

/* For older browsers */
::-moz-selection {
  background-color: #faf9f6;
  color: #000;
}

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "LT Binary Neue", sans-serif !important;
}

h1 {
  font-size: 16rem !important;
  line-height: 1;
}

h2 {
  font-family: "Red Hat Mono", monospace !important;
  font-size: 8rem !important;
}

h3 {
  font-size: 25px !important;
}

#vb-logo {
  height: 50px;
  width: 50px;
}

.blocco {
  /* margin: 0 8%; */
  padding: 0 8%;
  margin-bottom: 200px !important;
}

/** Inizio Stili Globali **/
a {
  font-size: 1.25rem;
  font-family: "LT Binary Neue", sans-serif;
  font-weight: 100;
  text-decoration: unset !important;
  position: relative;
  text-decoration: none;
}

p {
  font-family: "Identidad", sans-serif;
  font-weight: 100;
  font-size: 1.55rem;
}
/** FINE STILI GLOBALI **/

/** INTRO VIDEO **/

/* CSS for fixed video */
#video-container {
  position: fixed;
  display: flex;
  justify-content: center;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  z-index: -1; /* Ensure video is behind content */
}

#video-container video {
  width: 100%;
}

/* CSS for fade transition */
#content-container {
  opacity: 0;
  transition: opacity 1s ease-in-out;
}

/** FINE INTRO VIDEO **/

/** INZIO STILE HEADER **/
#header {
  overflow-x: hidden;
  position: fixed;
  top: 0;
  width: 100%;
  z-index: 99;
}

.header-container {
  font-size: 1.2rem;
  display: flex;
  justify-content: space-between;
  padding-top: 30px;
  margin-bottom: 0 !important;
}

.header-anchors {
  display: flex;
  gap: 15px;
}

.header-anchors a {
  padding: 3px 8px;
  transition: background 0.6s ease-in-out, color 0.6s ease-in-out;
}

/* .header-anchors a {
  transform: translate3d(0%, 0px, 0px);
  opacity: 0.6;
  transition: color 1.25s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s linear,
    transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
}

.header-anchors a:hover {
  opacity: 1;
  transition: color 1.25s cubic-bezier(0.19, 1, 0.22, 1), opacity 0.4s linear,
    transform 0.8s cubic-bezier(0.19, 1, 0.22, 1);
} */

.header-anchors a:hover {
  background: white;
  color: black;
}

@keyframes gradient {
  0% {
    background-position: 0% 50%;
  }
  50% {
    background-position: 100% 50%;
  }
  100% {
    background-position: 100% 100%;
  }
}
/** FINE STILE HEADER **/

/** INIZIO STILE FOOTER **/
#footer {
  font-size: 1.3rem;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  text-align: center;
  gap: 80px;
  position: relative;
  height: 100vh;
  margin: 150px 30px;
}

#footer .section-title {
  position: relative;
}

.footer-socials {
  display: flex;
  gap: 700px;
}

.footer-socials p {
  text-align: left;
  font-size: 1.2rem;
}

.social-links {
  display: flex;
  gap: 30px;
}

.email {
  font-family: "Red Hat Mono", monospace;
  font-size: 17rem;
  width: fit-content;
  cursor: pointer;
}

#footer a {
  cursor: pointer;
}

#footer span {
  text-align: left;
}

.line {
  width: 100%;
  border-top: 1px solid white;
}

/** FINE STILE FOOTER **/

/** FINE STILE FOOTER **/

/** INIZIO STILE INTRO **/

#intro {
  display: flex;
  flex-direction: column;
  justify-content: center;
  height: 100vh;
  background-size: cover;
}

#intro span {
  font-family: "Syne", sans-serif !important;
  position: absolute;
  bottom: 50px;
}

#intro i {
  font-size: 1rem;
  margin-left: 10px;
}

#intro p {
  font-size: 1.4rem;
  margin-left: 10px;
  font-family: "LT Binary Neue", sans-serif;
  font-weight: 100;
  text-transform: uppercase;
}

#p-name {
  font-weight: 400;
  margin: 10px 0;
  font-size: 16rem !important;
  line-height: 1;
  font-family: "LT Binary Neue", sans-serif !important;
}

#p-name-mobile {
  display: none;
}
/** FINE STILE INTRO **/

/** INIZIO STILE ABOUT **/

#about {
  display: flex;
  align-items: center;
  justify-content: space-around;
  height: 100vh;
  margin-top: 44px;
}

.about-box {
  font-size: 1.5rem;
  font-family: "LT Binary Neue", sans-serif !important;
}
/** FINE STILE ABOUT **/

/** STILE PROJECTS **/
#projects {
  display: flex;
  flex-direction: column;
}

.project-container {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  margin-top: 40px;
}

.project-list-left,
.project-list-right {
  display: flex;
  flex-direction: column;
  row-gap: 200px;
}

.project-list-right {
  margin-top: 400px;
}

#projects .title-work {
  margin-bottom: 100px;
}

.project-text {
  display: flex;
  flex-direction: column;
  margin-top: 35px;
}

.project-text a {
  width: fit-content;
}

.project-img {
  width: 700px;
  height: 750px;
  background-position: center;
  background-size: cover;
  transition: opacity 0.8s ease-in-out;
}

.project {
  background-color: rgba(0, 0, 0, 0.8);
  opacity: 0.5 !important;
  transition: opacity 0.8s ease-in-out;
}

.project:hover {
  opacity: 1 !important;
}
/** FINE STILE PROJECTS **/

